testdata/baselines/reference/submodule/compiler/parseUnaryExpressionNoTypeAssertionInJsx1.errors.txt
index.js(2,13): error TS2352: Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== index.js (1 errors) ====
    const x = "oops";
    const y = + <number> x;
                ~~~~~~~~~~
!!! error TS2352: Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
    